fix: body 的 overflow 不能 hidden

--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -16,7 +16,7 @@
     --xl: 36px;
 }
 
-*{
+body *{
     overflow: hidden;
 }
 
